{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 33,
  "lineage": "ce98bac7-9281-2b6b-319c-0a1e045aca49",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "project-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/networkInterfaces/p-network-interface",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/publicIPAddresses/public-ip-address",
                "subnet_id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network/subnets/tf-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-CF-36-C0",
            "name": "p-network-interface",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "tf-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Compute/virtualMachines/project-virtual-machine"
          },
          "dependencies": [
            "azurerm_public_ip.project-pub-ip",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.project-sn",
            "azurerm_virtual_network.project-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "project-sec-g",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/networkSecurityGroups/tf-security-group",
            "location": "uksouth",
            "name": "tf-security-group",
            "resource_group_name": "tf-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "security-rules",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "90.202.70.154",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "project-sec-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/networkSecurityGroups/tf-security-group/securityRules/security-rules",
            "name": "security-rules",
            "network_security_group_name": "tf-security-group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "tf-resources",
            "source_address_prefix": "90.202.70.154",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.project-sec-g",
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "project-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/publicIPAddresses/public-ip-address",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.167.210.131",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "public-ip-address",
            "resource_group_name": "tf-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "project-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network/subnets/tf-subnet",
            "name": "tf-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-resources",
            "virtual_network_name": "tf-network"
          },
          "dependencies": [
            "azurerm_resource_group.project-rg",
            "azurerm_virtual_network.project-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "project-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network/subnets/tf-subnet",
            "network_security_group_id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/networkSecurityGroups/tf-security-group",
            "subnet_id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network/subnets/tf-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.project-sec-g",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.project-sn",
            "azurerm_virtual_network.project-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "project-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3a286d0b-f919-4fa6-afb5-8ba3ef35bb3e",
            "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network",
            "location": "uksouth",
            "name": "tf-network",
            "resource_group_name": "tf-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/virtualNetworks/tf-network/subnets/tf-subnet",
                "name": "tf-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/656d163b-c980-4473-8d6f-45740bdd4114/resourceGroups/tf-resources/providers/Microsoft.Network/networkSecurityGroups/tf-security-group"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    }
  ]
}